This is just to motivate myself to improve a little bit every day :)

Best: 22

14-04-2024
Streak: 22
Learned:
Did:
    -Ensure SeasonInfo is populated with correct info, using inaccurate calculation of Solstices & Equinoxes

13-04-2024
Streak: 21
Learned:
    - Read about Solar Seasons.
Did:
    -Add strings for equinoxes, solstices, and seasonal festivals
    -Rewrite CalendarFragment to use a CalendarState data class, instead of only emitting DayOfWeek
    -Group SeasonInfo as separate data class within CalendarState data class

12-04-2024
Streak: 20
Learned:
Did:
    - Fix, clean up and test Calendar ViewModel and Repository
        but still need to remove CalendarFragment

11-04-2024
Streak: 19
Learned:
Did:
    - Rework getTodayWithOffset to be more configurable, change name as 'today with offset'
        sounds more confusing than clearly pointing out it is a wacky situational implementation.
    - Work on CalendarComponent (VM, Repo, Fragment) to implement coroutine that only checks if
        day has been updated when it needs to. (Messy WIP)

10-04-2024
Streak: 18
Learned:
    - Workshop on coroutines
Did:
    - Hacky implementation that temporarily uses CalendarFragment as a UI component
        (needs to change) as title for main menu
    - Start implementing a way to observe a change of date whilst app is running, using coroutines

09-04-2024
Streak: 17
Learned:
Did:
    -Add a reusable 'OutlinedText' component, to display readable text against any background
    -Revert overzealous auto-refactor ->
        'kotlin.code.style' setting had been renamed 'kotlin.code.ui.style' when style dir was
        placed in a directory named ui.

08-04-2024
Streak: 16
Learned:
Did:
    -Add standard padding definitions for different screen sizes

07-04-2024
Streak: 15
Learned:
Did:
    -Split colours from theme into separate file + function
    -Make colours providable to other composables in the tree using CompositionLocalProvider